--- a/config/boards/shields/caldera/caldera.dtsi
+++ b/config/boards/shields/caldera/caldera.dtsi
@@ -30,6 +30,7 @@ RC(5,0) RC(5,1) RC(5,2) RC(5,3) RC(5,4) RC(5,5)                 RC(5,6) RC(5,7) 
         compatible = "zmk,kscan-gpio-matrix";
 
         diode-direction = "col2row";
+        wakeup-source;
         row-gpios
             = <&pro_micro 21 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // Row A from the schematic file
             , <&pro_micro 20 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // Row B from the schematic file
@@ -38,5 +39,14 @@ RC(5,0) RC(5,1) RC(5,2) RC(5,3) RC(5,4) RC(5,5)                 RC(5,6) RC(5,7) 
             , <&pro_micro 15 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // Row E from the schematic file
             ;
 
+    };
+};
+
+/ {
+    keys {
+        compatible = "gpio-keys";
+        soft_off_key: soft_off_key {
+            gpios = <&pro_micro 1 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
+        };
     };
 };
