--- a/config/boards/shields/caldera/caldera_left.conf
+++ b/config/boards/shields/caldera/caldera_left.conf
@@ -3,3 +3,4 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_KEYBOARD_NAME="Caldera"
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+CONFIG_ZMK_PM_SOFT_OFF=y
