--- a/config/boards/shields/caldera/caldera.dtsi
+++ b/config/boards/shields/caldera/caldera.dtsi
@@ -59,3 +59,10 @@ RC(5,0) RC(5,1) RC(5,2) RC(5,3) RC(5,4) RC(5,5)                 RC(5,6) RC(5,7) 
         wakeup-source;
     };
 };
+
+/ {
+    soft_off_wakers {
+        compatible = "zmk,soft-off-wakeup-sources";
+        wakeup-sources = <&wakeup_source>;
+    };
+};
