--- a/config/boards/shields/caldera/caldera.dtsi
+++ b/config/boards/shields/caldera/caldera.dtsi
@@ -46,8 +46,10 @@ RC(5,0) RC(5,1) RC(5,2) RC(5,3) RC(5,4) RC(5,5)                 RC(5,6) RC(5,7) 
     keys {
         compatible = "gpio-keys";
         soft_off_key: soft_off_key {
-            gpios = <&pro_micro 15 (GPIO_OUTPUT_LOW)>;
-            gpios = <&pro_micro 2 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
+            row-gpios
+                = <&pro_micro 15 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
+            col-gpios
+                = <&pro_micro 2 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
         };
     };
 };
