--- a/build.yaml
+++ b/build.yaml
@@ -14,8 +14,8 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: caldera_left
+    shield: caldera_left nice_view
   - board: nice_nano_v2
-    shield: caldera_right
+    shield: caldera_right nice_view
   - board: nice_nano_v2
     shield: settings_reset
