--- a/config/boards/shields/caldera/caldera_right.conf
+++ b/config/boards/shields/caldera/caldera_right.conf
@@ -4,3 +4,5 @@ CONFIG_ZMK_KEYBOARD_NAME="Caldera"
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 CONFIG_ZMK_PM_SOFT_OFF=y
+CONFIG_ZMK_DISPLAY=y
+CONFIG_SSD1306=n
