--- a/build.yaml
+++ b/build.yaml
@@ -14,8 +14,8 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: caldera_left nice_view
+    shield: caldera_left nice_view_battery
   - board: nice_nano_v2
-    shield: caldera_right nice_view
+    shield: caldera_right nnice_view_battery
   - board: nice_nano_v2
     shield: settings_reset
