--- a/config/west.yml
+++ b/config/west.yml
@@ -2,10 +2,15 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
+    - name: infely                             # nice view battery
+      url-base: https://github.com/infely 
   projects:
     - name: zmk
       remote: zmkfirmware
       revision: main
       import: app/west.yml
+    - name: nice-view-battery                  
+      remote: infely                           
+      revision: main 
   self:
     path: config
